src/Core/Core.template.yml
Description: Core CloudFormation services including webhooks and alarms
Transform: AWS::Serverless-2016-10-31
Parameters:
  GithubOwner:
    Type: String
    Description: Organization/user that owns repositories the CICD webhook will handle.

  GithubToken:
    Type: String
    NoEcho: true
    Description: Encrypted Github token

  GithubSigningSecret:
    Type: String
    NoEcho: true
    Description: Encrypted signing secret Github uses to sign requests with.

  TemplateFilename:
    Type: String
    Description: Filename of cicd templates to look for in repositories
  
  StackSuffix:
    Type: String
    Description: Suffix to append to the repository name when creating cicd stacks

  DevVpcId:
    Type: String
    Default: ""
    Description: ID of the VPC to peer to in dev

  ProdVpcId:
    Type: String
    Default: ""
    Description: ID of the VPC to peer to in prod

  DevLoadBalancerDnsName:
    Type: String
    Default: ""
    Description: DNS name of the dev load balancer

  ProdLoadBalancerDnsName:
    Type: String
    Default: ""
    Description: DNS name of the prod load balancer

Conditions:
  SetupDevAccount: 
    !Not 
      - !Equals 
          - !Ref DevVpcId
          - ""

  SetupProdAccount: 
    !Not
      - !Equals 
          - !Ref ProdVpcId
          - ""

Resources:
  Certificate:
    Type: Custom::Certificate
    Properties:
      ServiceToken: !ImportValue cfn-certificate-resource:CertificateLambdaArn
      DomainName: brigh.id
      HostedZoneId: !ImportValue cfn-dns:HostedZoneId
      ValidationMethod: DNS
      SubjectAlternativeNames:
        - "*.brigh.id"
        - "*.dev.brigh.id"
    
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: dualstack
      SecurityGroups:
        - !ImportValue cfn-utilities:WebSecurityGroupId
      Subnets: !Split [",", !ImportValue cfn-utilities:SubnetIds]

  HttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            StatusCode: HTTP_301
            Protocol: HTTPS
            Port: 443
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  HttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - !If
            - SetupProdAccount
            - Type: forward
              TargetGroupArn: !Ref ProdTargetGroup
            - Type: fixed-response
              FixedResponseConfig:
                StatusCode: "404"
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref Certificate

  DevPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Condition: SetupDevAccount
    Properties:
      PeerOwnerId: !ImportValue cfn-metadata:DevAccountId
      PeerRoleArn: !ImportValue cfn-metadata:DevAgentRoleArn
      PeerVpcId: !Ref DevVpcId
      VpcId: !ImportValue cfn-utilities:VpcId

  DevPeeringRoute:
    Type: AWS::EC2::Route
    Condition: SetupDevAccount
    Properties:
     DestinationCidrBlock: 10.2.0.0/16
     RouteTableId: !ImportValue cfn-utilities:RouteTableId
     VpcPeeringConnectionId: !Ref DevPeeringConnection

  DevListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Condition: SetupDevAccount
    Properties:
      ListenerArn: !Ref HttpsListener
      Priority: 2
      Actions:
        - Type: forward
          TargetGroupArn: !Ref DevTargetGroup
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
              - "dev.*"
              - "*.dev.*"

  DevTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Condition: SetupDevAccount
    Properties:
      TargetType: ip
      VpcId: !ImportValue cfn-utilities:VpcId
      Port: 80
      HealthCheckPath: /healthcheck
      Protocol: HTTP

  DevTargetGroupAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: SetupDevAccount
    Properties:
      AlarmDescription: Dev load balancer target health
      AlarmActions:
        - !Ref UpdateTargetsTopic
      Threshold: 2.0
      TreatMissingData: breaching
      EvaluationPeriods: 1
      ComparisonOperator: LessThanOrEqualToThreshold
      Metrics:
        - Id: healthyfactor
          Expression: MIN([healthy - unhealthy, unhealthy])
          ReturnData: true
        - Id: unhealthy
          MetricStat:
            Metric:
              Namespace: AWS/ApplicationELB
              MetricName: UnHealthyHostCount
              Dimensions:
                - Name: LoadBalancer
                  Value: !GetAtt LoadBalancer.LoadBalancerName
                - Name: TargetGroup
                  Value: !GetAtt DevTargetGroup.TargetGroupName
            Stat: Maximum
            Period: 60
          ReturnData: false
        - Id: healthy
          MetricStat:
            Metric:
              Namespace: AWS/ApplicationELB
              MetricName: HealthyHostCount
              Dimensions:
                - Name: LoadBalancer
                  Value: !GetAtt LoadBalancer.LoadBalancerFullName
                - Name: TargetGroup
                  Value: !GetAtt DevTargetGroup.TargetGroupFullName
            Stat: Maximum
            Period: 60
          ReturnData: false
        - Id: customdata
          MetricStat:
            Metric:
              Namespace: CustomData
              MetricName: CustomData
              Dimensions:
                - Name: TargetGroupArn
                  Value: !Ref DevTargetGroup
                - Name: TargetDnsName
                  Value: !Ref DevLoadBalancerDnsName
            Stat: Maximum
            Period: 60
          ReturnData: false

  DevDnsRecords:
    Type: AWS::Route53::RecordSetGroup
    Condition: SetupDevAccount
    Properties:
      HostedZoneId: !ImportValue cfn-dns:HostedZoneId
      RecordSets:
        - Name: dev.brigh.id
          Type: A
          AliasTarget:
            HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID
            DNSName: !GetAtt LoadBalancer.DNSName
        - Name: dev.brigh.id
          Type: AAAA
          AliasTarget:
            HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID
            DNSName: !GetAtt LoadBalancer.DNSName

  ProdPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Condition: SetupProdAccount
    Properties:
      PeerOwnerId: !ImportValue cfn-metadata:ProdAccountId
      PeerRoleArn: !ImportValue cfn-metadata:ProdAgentRoleArn
      PeerVpcId: !Ref ProdVpcId
      VpcId: !ImportValue cfn-utilities:VpcId

  ProdPeeringRoute:
    Type: AWS::EC2::Route
    Condition: SetupProdAccount
    Properties:
     DestinationCidrBlock: 10.3.0.0/16
     RouteTableId: !ImportValue cfn-utilities:RouteTableId
     VpcPeeringConnectionId: !Ref ProdPeeringConnection

  ProdTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Condition: SetupProdAccount
    Properties:
      TargetType: ip
      VpcId: !ImportValue cfn-utilities:VpcId
      HealthCheckPath: /healthcheck
      Port: 80
      Protocol: HTTP

  ProdTargetGroupAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: SetupProdAccount
    Properties:
      AlarmDescription: Prod load balancer target health
      AlarmActions:
        - !Ref UpdateTargetsTopic
      Threshold: 2.0
      EvaluationPeriods: 1
      TreatMissingData: breaching
      ComparisonOperator: LessThanOrEqualToThreshold
      Metrics:
        - Id: healthyfactor
          Expression: MIN([healthy - unhealthy, unhealthy])
          ReturnData: true
        - Id: unhealthy
          MetricStat:
            Metric:
              Namespace: AWS/ApplicationELB
              MetricName: UnHealthyHostCount
              Dimensions:
                - Name: LoadBalancer
                  Value: !GetAtt LoadBalancer.LoadBalancerName
                - Name: TargetGroup
                  Value: !GetAtt ProdTargetGroup.TargetGroupName
            Stat: Maximum
            Period: 60
          ReturnData: false
        - Id: healthy
          MetricStat:
            Metric:
              Namespace: AWS/ApplicationELB
              MetricName: HealthyHostCount
              Dimensions:
                - Name: LoadBalancer
                  Value: !GetAtt LoadBalancer.LoadBalancerFullName
                - Name: TargetGroup
                  Value: !GetAtt ProdTargetGroup.TargetGroupFullName
            Stat: Maximum
            Period: 60
          ReturnData: false
        - Id: customdata
          MetricStat:
            Metric:
              Namespace: CustomData
              MetricName: CustomData
              Dimensions:
                - Name: TargetGroupArn
                  Value: !Ref ProdTargetGroup
                - Name: TargetDnsName
                  Value: !Ref ProdLoadBalancerDnsName
            Stat: Maximum
            Period: 60
          ReturnData: false

  ProdDnsRecords:
    Type: AWS::Route53::RecordSetGroup # Prod DNS records setup regardless of if peering or not
    Properties:
      HostedZoneId: !ImportValue cfn-dns:HostedZoneId
      RecordSets:
        - Name: brigh.id
          Type: A
          AliasTarget:
            HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID
            DNSName: !GetAtt LoadBalancer.DNSName
        - Name: brigh.id
          Type: AAAA
          AliasTarget:
            HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID
            DNSName: !GetAtt LoadBalancer.DNSName

  GithubWebhook:
    Type: AWS::Serverless::Function
    Properties:
      Handler: Core::Cythral.CloudFormation.Handlers.GithubWebhookHandler::Handle
      Runtime: dotnetcore3.1
      Timeout: 30
      CodeUri: bin/Release/netcoreapp3.0/linux-x64/publish/
      MemorySize: 256
      Policies:
        - AWSLambdaExecute
        - !Ref GithubWebhookPolicy
        - !ImportValue cfn-utilities:SecretsKeyDecryptPolicyArn
      AutoPublishAlias: GithubWebhook
      Environment:
        Variables:
          GITHUB_OWNER: !Ref GithubOwner
          GITHUB_TOKEN: !Ref GithubToken
          GITHUB_SIGNING_SECRET: !Ref GithubSigningSecret
          TEMPLATE_FILENAME: !Ref TemplateFilename
          STACK_SUFFIX: !Ref StackSuffix
          ROLE_ARN: !ImportValue cfn-utilities:MasterRoleArn

  GithubWebhookPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - cloudformation:CreateStack
              - cloudformation:UpdateStack
              - cloudformation:DescribeStacks
            Resource: "*"
          - Effect: Allow
            Action: iam:PassRole
            Resource: !ImportValue cfn-utilities:MasterRoleArn

  GithubWebhookPermission:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !Ref GithubWebhook.Alias
      Principal: elasticloadbalancing.amazonaws.com
      SourceArn: !Sub arn:aws:elasticloadbalancing:${AWS::Region}:${AWS::AccountId}:targetgroup/cfn-core-GithubWebhook/*

  GithubWebhookTarget:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: GithubWebhookPermission
    Properties:
      Name: cfn-core-GithubWebhook
      TargetType: lambda
      TargetGroupAttributes:
        - Key: lambda.multi_value_headers.enabled
          Value: false
      Targets:
        - Id: !Ref GithubWebhook.Alias

  GithubWebhookListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref HttpsListener
      Priority: 1
      Actions:
        - Type: forward
          TargetGroupArn: !Ref GithubWebhookTarget
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
              - brigh.id
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - /webhooks/github

  UpdateTargetsFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: Core::Cythral.CloudFormation.UpdateTargets.Handler::Handle
      Runtime: dotnetcore3.1
      Timeout: 30
      CodeUri: bin/Release/netcoreapp3.0/linux-x64/publish/
      Policies:
        - AWSLambdaExecute
        - !Ref UpdateTargetsPolicy
      Events:
        SNS:
          Type: SNS
          Properties:
            Topic: !Ref UpdateTargetsTopic
            Region: !Ref AWS::Region

  UpdateTargetsTopic:
    Type: AWS::SNS::Topic

  UpdateTargetsPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - elasticloadbalancing:DescribeTargetHealth
              - elasticloadbalancing:RegisterTargets
              - elasticloadbalancing:DeregisterTargets
            Resource: "*"

  StackDeploymentStatusFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: Core::Cythral.CloudFormation.StackDeploymentStatus.Handler::Handle
      Runtime: dotnetcore3.1
      Timeout: 30
      CodeUri: bin/Release/netcoreapp3.0/linux-x64/publish/
      Policies:
        - AWSLambdaExecute
        - !Ref StackDeploymentStatusPolicy
      Events:
        SNS:
          Type: SNS
          Properties:
            Topic: !Ref StackDeploymentStatusTopic
            Region: !Ref AWS::Region

  StackDeploymentStatusTopic:
    Type: AWS::SNS::Topic

  StackDeploymentStatusPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: 
              - states:SendTaskSuccess
              - states:SendTaskFailure
            Resource: "*"

Outputs:
  LoadBalancerCanonicalHostedZoneId:
    Value: !GetAtt LoadBalancer.CanonicalHostedZoneID
    Description: ID of the canonical hosted zone for the primary load balancer
    Export:
      Name: !Sub ${AWS::StackName}:LoadBalancerCanonicalHostedZoneId

  LoadBalancerDnsName:
    Value: !GetAtt LoadBalancer.DNSName
    Description: DNS name of the primary load balancer
    Export:
      Name: !Sub ${AWS::StackName}:LoadBalancerDnsName

  HttpsListenerArn:
    Value: !Ref HttpsListener
    Description: ARN of the primary load balancer's HTTPS listener
    Export:
      Name: !Sub ${AWS::StackName}:HttpsListenerArn

  DevPeeringConnectionId:
    Value: !Ref DevPeeringConnection
    Condition: SetupDevAccount
    Description: Id of the peering connection with the dev account
    Export:
      Name: !Sub ${AWS::StackName}:DevPeeringConnectionId

  ProdPeeringConnectionId:
    Value: !Ref ProdPeeringConnection
    Condition: SetupProdAccount
    Description: Id of the peering connection with the prod account
    Export:
      Name: !Sub ${AWS::StackName}:ProdPeeringConnectionId
